<resources>
    <string name="app_name">SafeShare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Maps</string>
    <string name="menu_report">Risk Report</string>
    <string name="menu_rescue">Manage Risks</string>

    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        FCM registration token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Password Again</string>
    <string name="prompt_realname">Real Name</string>
    <string name="prompt_phone">Phone</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="location">Location</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="register_dialog">Not registered ID, do you want to register now?</string>
    <string name="password_check_failed">Password is incorrect.</string>
    <string name="move_to_current_location">Moving to current location.</string>
    <string name="etc">etc…</string>
    <string name="risk_label_type">Type</string>
    <string name="risk_label_title">Title</string>
    <string name="risk_label_content">Content</string>
    <string name="risk_label_photo">Photo</string>
    <string name="risk_label_title_hint">Input Title…</string>
    <string name="risk_label_content_hint">Input Content…</string>
    <string name="risk_label_photo_hint">Choose Photo…</string>
    <string name="risk_label_submit">Risk Report Submit</string>
    <string name="risk_title_sample">%s occurrence</string>
    <string name="risk_content_sample">%s has occurred near location. Assistance is requested.</string>
    <string name="risk_confirm">When a rescue request is sent, location information and incident details can be provided to emergency responders and nearby users. This action is irreversible, and false reporting may result in legal consequences.\n\nAre you sure you want to make a rescue request from your current location?</string>
    <string name="risk_label_time">Reported At</string>
    <string name="risk_label_is_solved">Is solved</string>
    <string name="risk_label_solved">Solved</string>
    <string name="risk_label_unsolved">Unsolved</string>
    <string name="risk_label_location">Location</string>
    <string name="risk_report_title">Risk Reports</string>
    <string name="risk_label_level">Risk Level</string>
    <string name="risk_label_impact">Risk Impact</string>
    <string name="risk_label_user">User</string>
    <string name="emergency_request_title">Emergency Request</string>
    <string name="emergency_request_content">Initiating an emergency request. This action is irreversible, and you may be legally liable for false reporting.\n\nPlease note that emergency requests should only be used in extremely urgent situations. Are you sure you want to request rescue from your current location?</string>
    <string name="emergency_request_content_again">Let me ask you again.</string>
</resources>