<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.toygoon.safeshare.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.toygoon.safeshare.ui.risk.RiskFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_risk" />

    <fragment
        android:id="@+id/nav_rescue"
        android:name="com.toygoon.safeshare.ui.rescue.RescueFragment"
        android:label="@string/menu_rescue"
        tools:layout="@layout/fragment_rescue" />
</navigation>