<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:text="@string/menu_report"
        android:textColor="@color/green_700"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_risk_spinner"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/risk_label_type"
        android:textColor="@color/green_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/risk_factor_spinner"
        app:layout_constraintTop_toTopOf="@id/risk_factor_spinner" />

    <Spinner
        android:id="@+id/risk_factor_spinner"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/box_border"
        android:elevation="10dp"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        android:spinnerMode="dropdown"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_risk_title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/risk_label_title"
        android:textColor="@color/green_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/risk_factor_title"
        app:layout_constraintTop_toTopOf="@id/risk_factor_title" />

    <EditText
        android:id="@+id/risk_factor_title"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/box_border"
        android:elevation="10dp"
        android:hint="@string/risk_label_title_hint"
        android:paddingStart="18dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/risk_factor_spinner" />

    <TextView
        android:id="@+id/label_risk_content"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/risk_label_content"
        android:textColor="@color/green_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/label_risk_title"
        app:layout_constraintTop_toBottomOf="@+id/label_risk_title" />

    <EditText
        android:id="@+id/risk_factor_content"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:background="@drawable/box_border"
        android:elevation="10dp"
        android:gravity="top"
        android:hint="@string/risk_label_content_hint"
        android:inputType="text|textMultiLine"
        android:paddingStart="18dp"
        android:paddingTop="18dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/label_risk_content"
        app:layout_constraintTop_toBottomOf="@+id/label_risk_content" />


    <TextView
        android:id="@+id/label_risk_photo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/risk_label_photo"
        android:textColor="@color/green_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/risk_factor_photo"
        app:layout_constraintTop_toTopOf="@id/risk_factor_photo" />

    <Button
        android:id="@+id/risk_factor_photo"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/white"
        android:elevation="10dp"
        android:hint="@string/risk_label_photo_hint"
        android:paddingStart="18dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/risk_factor_content" />

    <Button
        android:id="@+id/submit_risk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="64dp"
        android:enabled="true"
        android:text="@string/risk_label_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/risk_factor_content"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>