<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.login.LoginActivity">

    <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="@string/action_sign_in"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/green_700"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="300dp"
            android:background="@drawable/box_border"
            android:textColor="@color/black"
            android:paddingLeft="20dp"
            android:elevation="10dp"
            android:hint="@string/prompt_id"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/box_border"
            android:textColor="@color/black"
            android:paddingLeft="20dp"
            android:elevation="10dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />


    <EditText
            android:id="@+id/password2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/box_border"
            android:textColor="@color/black"
            android:paddingLeft="20dp"
            android:elevation="10dp"
            android:visibility="gone"
            android:hint="@string/prompt_password2"
            android:imeActionLabel="@string/prompt_password2"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />


    <EditText
            android:id="@+id/realname"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/box_border"
            android:textColor="@color/black"
            android:visibility="gone"
            android:paddingLeft="20dp"
            android:elevation="10dp"
            android:hint="@string/prompt_realname"
            android:imeActionLabel="@string/prompt_realname"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password2" />


    <EditText
            android:id="@+id/phone"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/box_border"
            android:textColor="@color/black"
            android:visibility="gone"
            android:paddingLeft="20dp"
            android:elevation="10dp"
            android:hint="@string/prompt_phone"
            android:imeActionLabel="@string/prompt_phone"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/realname" />


    <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="64dp"
            android:enabled="true"
            android:text="@string/action_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>